--- a/app/src/main/res/layout/layout_panorama_album_pop_menu.xml
+++ b/app/src/main/res/layout/layout_panorama_album_pop_menu.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#66000000">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
     <android.support.v7.widget.CardView
         android:layout_width="@dimen/y192"
         android:layout_height="@dimen/y145"
-        android:layout_marginStart="@dimen/y46"
-        android:layout_marginTop="@dimen/y30"
         android:background="#FFFFFF"
         app:cardCornerRadius="@dimen/y3">
 
@@ -26,7 +23,6 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:button="@drawable/icon_panorama_album_menu_photo_phone"
-                android:checked="true"
                 android:padding="@dimen/y13"
                 android:text="相册+手机相册"
                 android:textColor="@color/color_panorama_album_menu_photo_mode"
