--- a/app/src/main/res/layout/activity_camera_live.xml
+++ b/app/src/main/res/layout/activity_camera_live.xml
@@ -13,36 +13,46 @@
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content">-->
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/rLayout_camera_live_top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_0ba8cf">
 
-        <ImageView
-            android:id="@+id/imgV_nav_back"
-            style="@style/ripple_background"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:paddingEnd="@dimen/x20"
-            android:paddingStart="@dimen/x20"
-            android:src="@drawable/nav_icon_back_white" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <com.cylan.jiafeigou.widget.indicator.PagerSlidingTabStrip
-            android:id="@+id/v_indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:layout_toEndOf="@+id/imgV_nav_back"
-            app:pstsTabPaddingLeftRight="14dip" />
+            <ImageView
+                android:id="@+id/imgV_nav_back"
+                style="@style/ripple_background"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y48"
+                android:paddingEnd="@dimen/x20"
+                android:paddingStart="@dimen/x20"
+                android:src="@drawable/nav_icon_back_white" />
 
-        <ImageView
+            <com.cylan.jiafeigou.widget.indicator.PagerSlidingTabStrip
+                android:id="@+id/v_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y48"
+                app:pstsTabPaddingLeftRight="14dip" />
+        </LinearLayout>
+
+        <com.cylan.jiafeigou.widget.ImageViewTip
             android:id="@+id/imgV_camera_title_top_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:padding="@dimen/y14"
-            android:src="@drawable/icon_setting" />
-    </RelativeLayout>
+            android:layout_gravity="bottom|end"
+            android:padding="@dimen/y10"
+            android:src="@drawable/icon_setting"
+            app:t_border_color="@color/color_white"
+            app:t_border_width="@dimen/y1"
+            app:t_point_color="@color/color_red_dot_f43531"
+            app:t_radius="@dimen/y2"
+            app:t_round_image="true" />
+    </FrameLayout>
 
     <!--</FrameLayout>-->
 
