1.固件下载模块Bug 2.sd卡设备离线提示 3.日志过大修改 5.手机注册验证码时间控件bug 6.

--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -108,7 +108,10 @@
                 android:textSize="@dimen/sp14" />
 
             <TextView
-                android:layout_below="@id/tv_hardware_update_title"
+                android:visibility="gone"
+                android:textColor="#8c8c8c"
+                style="@style/information_item"
+                android:layout_below="@id/tv_hardware_new_version"
                 android:id="@+id/tv_version_describe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
