--- a/app/src/main/res/layout/fragment_home_mine_setting_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting_about.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/y60"
             android:layout_marginTop="@dimen/y56"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/and_logo_about_180x180" />
 
         <TextView
             android:id="@+id/tv_app_version"
