--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -450,4 +450,6 @@
         <item name="colorControlNormal">@color/color_767676</item>
         <item name="colorControlActivated">@color/color_4b9fd5</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 </resources>
