--- a/app/src/main/res/drawable/seek_bar_dot_white.xml
+++ b/app/src/main/res/drawable/seek_bar_dot_white.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#CCCCCC" />
+    <solid android:color="#FFFFFF" />
     <size
-        android:width="5dp"
-        android:height="5dp" />
+        android:width="@dimen/y10"
+        android:height="@dimen/y10" />
 
 </shape>
