--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -21,7 +21,7 @@
             android:drawablePadding="@dimen/y15"
             android:drawableStart="@drawable/nav_tab_back_selector"
             android:padding="@dimen/y15"
-            android:text="string/_720"
+            android:text="720全景相机"
             android:textColor="@color/color_white"
             android:textSize="@dimen/sp16" />
 
