--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:background="@color/color_white"
     android:layout_width="match_parent"
@@ -30,7 +31,7 @@
                     android:drawablePadding="@dimen/x15"
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/x15"
-                    android:text="固件升级"
+                    android:text="@string/Tap1_FirmwareUpdate"
                     android:textColor="@color/color_white"
                     android:textSize="@dimen/sp18" />
             </FrameLayout>
@@ -45,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/y12"
-                android:text="设备"
+                android:text="@string/DEVICE"
                 android:textColor="#4B9FD5"
                 android:textSize="@dimen/sp14" />
 
@@ -56,7 +57,7 @@
         </FrameLayout>
 
         <TextView
-            android:text="当前版本"
+            android:text="@string/Tap1_CurrentVersion"
             style="@style/information_item"
             android:layout_marginTop="@dimen/y12"
             android:layout_width="wrap_content"
@@ -82,30 +83,45 @@
             android:layout_height="1dip"/>
 
 
-        <RelativeLayout
-            android:id="@+id/rl_new_version_describe_container"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_hardware_update_title"
-                android:text="最新版本"
-                style="@style/information_item"
-                android:layout_marginTop="@dimen/y12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sp16" />
+            <RelativeLayout
+                android:id="@+id/rl_new_version_describe_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_hardware_new_version"
-                android:layout_below="@id/tv_hardware_update_title"
-                style="@style/information_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/y6"
-                android:text="3.0.0.1"
-                android:textColor="#8c8c8c"
-                android:textSize="@dimen/sp14" />
+                <TextView
+                    android:id="@+id/tv_hardware_update_title"
+                    android:text="@string/Tap1_LatestVersion"
+                    style="@style/information_item"
+                    android:layout_marginTop="@dimen/y12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/sp16" />
+
+                <TextView
+                    android:id="@+id/tv_hardware_new_version"
+                    android:layout_below="@id/tv_hardware_update_title"
+                    style="@style/information_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/y6"
+                    android:text="3.0.0.1"
+                    android:textColor="#8c8c8c"
+                    android:textSize="@dimen/sp14" />
+
+                <View
+                    android:layout_marginRight="@dimen/x20"
+                    android:id="@+id/hardware_update_point"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/hardware_update_point"
+                    android:layout_width="@dimen/x7"
+                    android:layout_height="@dimen/y7"/>
+            </RelativeLayout>
 
             <TextView
                 android:visibility="gone"
@@ -116,16 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <View
-                android:visibility="invisible"
-                android:layout_marginRight="@dimen/x20"
-                android:id="@+id/hardware_update_point"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/hardware_update_point"
-                android:layout_width="@dimen/x7"
-                android:layout_height="@dimen/y7"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_download_soft_file"
@@ -139,7 +146,6 @@
             android:background="@drawable/long_btn_bg_shape_white"
             android:textColor="#4B9FD5"
             android:textSize="@dimen/sp16" />
-
     </LinearLayout>
 
     <LinearLayout
