--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -110,4 +110,5 @@
     <color name="color_6FA3FD">#6FA3FD</color>
     <color name="color_767676">#767676</color>
     <color name="color_F2333333">#F2333333</color>
+    <color name="color_FFFCE1">#FFFCE1</color>
 </resources>
