1.固件下载文件本地保存 2.帮助与反馈无法显示 3.SD卡判断离线 4.提示框取消按钮消失 5.消息中心点击删除崩溃

--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -114,6 +114,7 @@
                     android:textSize="@dimen/sp14" />
 
                 <View
+                    android:visibility="invisible"
                     android:layout_marginRight="@dimen/x20"
                     android:id="@+id/hardware_update_point"
                     android:layout_alignParentRight="true"
